--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vscode-cal",
   "displayName": "vscode-cal",
   "description": "",
+  "publisher": "Nicholas",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.102.0"
@@ -10,7 +11,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:vscode-cal.exportQuestionsJson"
+    "onCommand:vscode-cal.exportQuestionsJson",
+    "onCommand:vscode-cal.openQuestionByNumber"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -18,6 +20,10 @@
       {
         "command": "vscode-cal.exportQuestionsJson",
         "title": "Export Questions as JSON"
+      },
+      {
+        "command": "vscode-cal.openQuestionByNumber",
+        "title": "Open Question by Number"
       }
     ]
   },
@@ -42,6 +48,7 @@
   },
   "dependencies": {
     "@types/sqlite3": "^3.1.11",
+    "gray-matter": "^4.0.3",
     "sqlite3": "^5.1.7"
   }
 }
