--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,3 @@
-// A launch configuration that compiles the extension and then opens it inside a new window
-// Use IntelliSense to learn about possible attributes.
-// Hover to view descriptions of existing attributes.
-// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 {
 	"version": "0.2.0",
 	"configurations": [
@@ -10,7 +6,11 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
+				// This argument loads your extension. Do not remove it.
+				"--extensionDevelopmentPath=${workspaceFolder}",
+				
+				// ADD THIS LINE: This is the path to the folder you want to open.
+				"${workspaceFolder}/images" 
 			],
 			"outFiles": [
 				"${workspaceFolder}/out/**/*.js"
