--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "out",
     "lib": ["ES2022", "dom"],
     "sourceMap": true,
-    "rootDir": "src",
+    "rootDirs": ["src", "features"],
     "strict": true,
     "esModuleInterop": true
     /* Additional Checks */
