--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.102.0",
@@ -70,15 +71,18 @@
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
     "eslint": "^9.25.1",
+    "jest": "^30.0.4",
+    "jest-mock-vscode": "^4.5.0",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@types/katex": "^0.16.7",
     "@types/markdown-it": "^14.1.1",
     "@types/sqlite3": "^3.1.11",
+    "@vscode/markdown-it-katex": "^1.0.0",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.11",
-    "@vscode/markdown-it-katex": "^1.0.0",
     "markdown-it": "^14.1.0",
     "sqlite3": "^5.1.7"
   }
