--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "sourceMap": true,
     "rootDirs": ["src", "features"],
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": [
+      "mocha",
+      "node"
+    ]
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
