--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,13 +4,12 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "npm: compile",
 			"type": "npm",
-			"script": "watch",
-			"problemMatcher": "$tsc-watch",
-			"isBackground": true,
-			"presentation": {
-				"reveal": "never"
-			},
+			"script": "compile",
+			"problemMatcher": [
+				"$tsc"
+			],
 			"group": {
 				"kind": "build",
 				"isDefault": true
